// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mdx-loader snapshot with body 1`] = `
import React from "react";
import { MDXTag } from "@mdx-js/tag";

/* @jsx mdx */
import mdx from "@mdx-js/mdx/create-element";
const layoutProps = {};
export default class MDXContent extends React.Component {
  constructor(props) {
    super(props);
    this.layout = null;
  }

  render() {
    const { components, ...props } = this.props;
    return (
      <MDXTag name="wrapper" components={components}>
        <MDXTag name="h1" components={components}>{\`Some title\`}</MDXTag>
        <MDXTag
          name="p"
          components={components}
        >{\`a bit of a paragraph\`}</MDXTag>
        <MDXTag name="p" components={components}>{\`some content\`}</MDXTag>
      </MDXTag>
    );
  }
}
MDXContent.isMDXComponent = true;
export const _frontmatter = {};

`;

exports[`mdx-loader snapshot with frontmatter 1`] = `
import React from "react";
import { MDXTag } from "@mdx-js/tag";

/* @jsx mdx */
import mdx from "@mdx-js/mdx/create-element";
const layoutProps = {};
export default class MDXContent extends React.Component {
  constructor(props) {
    super(props);
    this.layout = null;
  }

  render() {
    const { components, ...props } = this.props;
    return (
      <MDXTag name="wrapper" components={components}>
        <MDXTag name="h1" components={components}>{\`Some title\`}</MDXTag>
        <MDXTag
          name="p"
          components={components}
        >{\`a bit of a paragraph\`}</MDXTag>
        <MDXTag name="p" components={components}>{\`some content\`}</MDXTag>
      </MDXTag>
    );
  }
}
MDXContent.isMDXComponent = true;
export const _frontmatter = {
  one: "two",
  three: 4,
  array: [1, 2, 3]
};

`;

exports[`mdx-loader snapshot with frontmatter-layout 1`] = `
import React from "react";
import { MDXTag } from "@mdx-js/tag";

/* @jsx mdx */
import mdx from "@mdx-js/mdx/create-element";
const layoutProps = {};
export default class MDXContent extends React.Component {
  constructor(props) {
    super(props);

    this.layout = ({ children, ...props }) => <div>{children}</div>;
  }

  render() {
    const { components, ...props } = this.props;
    return (
      <MDXTag
        name="wrapper"
        Layout={this.layout}
        layoutProps={Object.assign({}, layoutProps, props)}
        components={components}
      >
        <MDXTag name="h1" components={components}>{\`Some title\`}</MDXTag>
        <MDXTag
          name="p"
          components={components}
        >{\`a bit of a paragraph\`}</MDXTag>
        <MDXTag name="p" components={components}>{\`some content\`}</MDXTag>
      </MDXTag>
    );
  }
}
MDXContent.isMDXComponent = true;
export const _frontmatter = {
  one: "two",
  three: 4,
  array: [1, 2, 3]
};

`;

exports[`mdx-loader snapshot with frontmatter-layout-namedExports 1`] = `
import React from "react";
import { MDXTag } from "@mdx-js/tag";

/* @jsx mdx */
import mdx from "@mdx-js/mdx/create-element";
export const meta = {
  author: "chris"
};
const layoutProps = {
  meta
};
export default class MDXContent extends React.Component {
  constructor(props) {
    super(props);

    this.layout = ({ children, ...props }) => <div>{children}</div>;
  }

  render() {
    const { components, ...props } = this.props;
    return (
      <MDXTag
        name="wrapper"
        Layout={this.layout}
        layoutProps={Object.assign({}, layoutProps, props)}
        components={components}
      >
        <MDXTag name="h1" components={components}>{\`Some title\`}</MDXTag>
        <MDXTag
          name="p"
          components={components}
        >{\`a bit of a paragraph\`}</MDXTag>
        <MDXTag name="p" components={components}>{\`some content\`}</MDXTag>
      </MDXTag>
    );
  }
}
MDXContent.isMDXComponent = true;
export const _frontmatter = {
  one: "two",
  three: 4,
  array: [1, 2, 3]
};

`;

exports[`mdx-loader snapshot with frontmatter-namedExports 1`] = `
import React from "react";
import { MDXTag } from "@mdx-js/tag";

/* @jsx mdx */
import mdx from "@mdx-js/mdx/create-element";
export const meta = {
  author: "chris"
};
const layoutProps = {
  meta
};
export default class MDXContent extends React.Component {
  constructor(props) {
    super(props);
    this.layout = null;
  }

  render() {
    const { components, ...props } = this.props;
    return (
      <MDXTag name="wrapper" components={components}>
        <MDXTag name="h1" components={components}>{\`Some title\`}</MDXTag>
        <MDXTag
          name="p"
          components={components}
        >{\`a bit of a paragraph\`}</MDXTag>
        <MDXTag name="p" components={components}>{\`some content\`}</MDXTag>
      </MDXTag>
    );
  }
}
MDXContent.isMDXComponent = true;
export const _frontmatter = {
  one: "two",
  three: 4,
  array: [1, 2, 3]
};

`;

exports[`mdx-loader snapshot with layout 1`] = `
import React from "react";
import { MDXTag } from "@mdx-js/tag";

/* @jsx mdx */
import mdx from "@mdx-js/mdx/create-element";
const layoutProps = {};
export default class MDXContent extends React.Component {
  constructor(props) {
    super(props);

    this.layout = ({ children, ...props }) => <div>{children}</div>;
  }

  render() {
    const { components, ...props } = this.props;
    return (
      <MDXTag
        name="wrapper"
        Layout={this.layout}
        layoutProps={Object.assign({}, layoutProps, props)}
        components={components}
      >
        <MDXTag name="h1" components={components}>{\`Some title\`}</MDXTag>
        <MDXTag
          name="p"
          components={components}
        >{\`a bit of a paragraph\`}</MDXTag>
        <MDXTag name="p" components={components}>{\`some content\`}</MDXTag>
      </MDXTag>
    );
  }
}
MDXContent.isMDXComponent = true;
export const _frontmatter = {};

`;

exports[`mdx-loader snapshot with layout-namedExports 1`] = `
import React from "react";
import { MDXTag } from "@mdx-js/tag";

/* @jsx mdx */
import mdx from "@mdx-js/mdx/create-element";
export const meta = {
  author: "chris"
};
const layoutProps = {
  meta
};
export default class MDXContent extends React.Component {
  constructor(props) {
    super(props);

    this.layout = ({ children, ...props }) => <div>{children}</div>;
  }

  render() {
    const { components, ...props } = this.props;
    return (
      <MDXTag
        name="wrapper"
        Layout={this.layout}
        layoutProps={Object.assign({}, layoutProps, props)}
        components={components}
      >
        <MDXTag name="h1" components={components}>{\`Some title\`}</MDXTag>
        <MDXTag
          name="p"
          components={components}
        >{\`a bit of a paragraph\`}</MDXTag>
        <MDXTag name="p" components={components}>{\`some content\`}</MDXTag>
      </MDXTag>
    );
  }
}
MDXContent.isMDXComponent = true;
export const _frontmatter = {};

`;

exports[`mdx-loader snapshot with namedExports 1`] = `
import React from "react";
import { MDXTag } from "@mdx-js/tag";

/* @jsx mdx */
import mdx from "@mdx-js/mdx/create-element";
export const meta = {
  author: "chris"
};
const layoutProps = {
  meta
};
export default class MDXContent extends React.Component {
  constructor(props) {
    super(props);
    this.layout = null;
  }

  render() {
    const { components, ...props } = this.props;
    return (
      <MDXTag name="wrapper" components={components}>
        <MDXTag name="h1" components={components}>{\`Some title\`}</MDXTag>
        <MDXTag
          name="p"
          components={components}
        >{\`a bit of a paragraph\`}</MDXTag>
        <MDXTag name="p" components={components}>{\`some content\`}</MDXTag>
      </MDXTag>
    );
  }
}
MDXContent.isMDXComponent = true;
export const _frontmatter = {};

`;
